--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ authors = [{ name = "Your Name", email = "you@example.com" }]
 requires-python = ">=3.10,<=3.13"
 dependencies = [
     "crewai[tools]>=0.83.0,<1.0.0",
-    "PyPDF2 >=3.0"
+    "PyPDF2 >=3.0",
+    "streamlit >= 1.40",
+    "gradio >= 5.7"
 ]
 
 [project.scripts]
